Fixed spacing inside articles.

--- a/themes/appfc/static/css/site.css
+++ b/themes/appfc/static/css/site.css
@@ -136,6 +136,6 @@ li {
   padding-left: 1rem;
 }
 
-p {
+article p {
   margin: 1.5rem 0;
 }
